--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,43 +12,44 @@
 </head>
 
 <body>
-    <header> 
-        <ul class="upper-nav">
-            <li>
-                <a href="#">Chirpus inc.</a>
-            </li>
-            <li>
-                <a href="#">Work</a>
-            </li>
-            <li>
-                <a href="#">About Us</a>
-            </li>
-            <li>
-                <a href="#">Contact</a>
-            </li>
-            <li>
-                <a href="#" class="cta">Hire Us</a>
-            </li>
-        </ul>
+    <header>
+        <h1>chirpus inc.</h1>
+        <nav class="header-nav">
+            <ul>
+                <li><a href="#">Work</a></li>
+                <li><a href="#">About us</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#" class="cta">Hire Us</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
-        <h1>Chirpus Inc.</h1>
-        <p class="lorem-ipsum">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt alias minima minus expedita dolore commodi eveniet esse, debitis veniam molestiae cumque tenetur, corporis fugiat, explicabo pariatur accusamus? Nulla, eaque dolores.</p>
-        <a href="#" class="cta">Call To Action</a>
+        <section class="about-us">
+            <h2 class="about-us-heading">chirpus inc.</h2>
+            <p class="about-us-p">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni iusto,
+                atque itaque ipsum, deserunt iste aliquam accusantium porro a, animi
+                autem tempora pariatur? Nulla odio commodi aliquam id, deleniti
+                asperiores!
+            </p>
+            <a href="#" class="cta">Call To Action</a>
+        </section>
+        <section class="circles-container">
+            <section class="circle-1"></section>
+            <section class="circle-2"></section>
+            <section class="circle-3"></section>
+        </section>
     </main>
-    <Footer>
-        <p class="lower-logo">Chirpus Inc</p>
-        <ul class="lower-nav">
-            <li>
-                <a href="#">Link 1</a>
-            </li>
-            <li>
-                <a href="#">Link 2</a>
-            </li>
-            <li>
-                <a href="#">Link 3</a>
-            </li>
-        </ul>
-    </Footer>
+    <footer>
+        <h3 class="footer-heading">chirpus inc.</h3>
+        <nav class="footer-nav">
+            <ul>
+                <li><a href="#">Link 1 </a></li>
+                <li><a href="#">Link 2</a></li>
+                <li><a href="#">Link 3</a></li>
+            </ul>
+        </nav>
+    </footer>
 </body>
+
 </html>
